--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="remembrance-details">
                 <div class="remembrance-item">
                     <h3><strong>豎靈地點</strong></h3>
-                    <p><strong><a href="https://maps.app.goo.gl/nrjV9YHrTAE9bbMX9?g_st=com.google.maps.preview.copy" target="_blank">桃園 佛緣苑會館</a></strong></p>
-                    <p><strong>桃園 佛緣苑會館 2F [ 牌位區15號 ]</strong></p>
+                    <p><strong><a href="https://maps.app.goo.gl/nrjV9YHrTAE9bbMX9?g_st=com.google.maps.preview.copy" target="_blank"> 佛緣苑會館 </a></strong></p>
+                    <p><strong> 佛緣苑會館 2F [ 牌位區15號 ]</strong></p>
                     <p><strong>地址：330桃園市桃園區大有路920號</a></strong></p>
                 </div>
                 <div class="remembrance-item">
@@ -67,7 +67,7 @@
                     <p><strong>中華民國 2024年09月18日（三）</strong></p>
                 </div>
                 <div class="remembrance-item">
-                    <h3><strong>追思會時間</strong></h3>
+                    <h3><strong>追思時間</strong></h3>
                     <p><strong>上午 09:30 家奠禮</strong></p>
                     <p><strong>上午 10:00 公奠禮</strong></p>
                 </div>
@@ -80,9 +80,9 @@
         <!-- 感謝信息部分 -->
         <div class="remembrance-thanks">
             <p class="fade-in-text"><strong>感謝親友們在這段時間的慰問與關心，您的關懷和鼓勵，陪伴我們度過了這段艱難的時光。</strong></p>
-            <p class="fade-in-text"><strong> 敬邀您，與我們一同追思懷念黃徐玉珠的美好回憶，並向您獻上最深的敬意。</strong></p>
-            <p class="fade-in-text"><strong>謝謝您！鞠躬。</strong></p>
-            <p class="fade-in-text"><strong>聯繫電話 📞 佳玲 0973-035-148 </strong> </p> 
+            <p class="fade-in-text"><strong> 敬邀您，與我們一同追思緬懷黃徐玉珠夫人，並向您獻上最深的敬意。</strong></p>
+            <p class="fade-in-text"><strong> 謝謝您！。</strong></p>
+            <p class="fade-in-text"><strong> 聯繫電話 📞 佳玲 0973-035-148 </strong> </p> 
         </div>
 
             <style>
