--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 
         <!-- 致贈花籃部分 -->
         <section id="donate-flower">
-            <h2><strong>致贈花籃</strong></h2>
-            <p>為求會場一致性，致贈花籃請參見以下選項：</p>
+            <h2><strong>致贈花禮，送上一份祝福</strong></h2>
+                <p>致贈花籃，請點選，參見以下選項：</p>
             <a href="javascript:void(0);" id="show-flower-baskets" class="btn"><strong>致贈花籃</strong></a>
 
                 <!-- 花篮画廊，默认隐藏 -->
